Made month buttons fixed 210px width Added some invisible month buttons to pad it out niceley

--- a/WebClient/css/layout.css
+++ b/WebClient/css/layout.css
@@ -90,3 +90,7 @@ a.heightButton{
 	visibility: hidden;
 	-webkit-transform: translateZ(0);
 }
+
+.ui.month.button{
+	width: 210px;
+}
